# colophon

./: LICENSE  README.md  pyproject.toml
colophon/: __init__.py  __main__.py  agent_skills.py  agents.py  cli.py  coordination.py  deconstruct.py  functional_forms.py  genre_ontology.py  graph.py  import_cli.py  io.py  kg_update.py  llm.py  models.py  note_import.py  ontology.py  pipeline.py  recommendations.py  retrieval.py  user_input.py  vectors.py  writing_ontology.py
docs/: api.rst  architecture.rst  conf.py  examples.rst  getting_started.rst  implementation-plan.md  index.rst  references.rst  roadmap.rst  tutorial.rst  upload_tutorial.rst  usage.rst  user_guide.rst
examples/: bibliography.bib  bibliography.csv  bibliography.json  colophon_python_api_tutorial.ipynb  graph_dump.sql  graph_edges.csv  kg_update_local.json  kg_update_openai.json  llm_claude.json  llm_codex.json  llm_copilot.json  llm_openai.json  llm_pi.json  outline_preliminary.json  prompts.json  recommendation_openalex.json  recommendation_semantic_scholar.json  seed_graph.json
ontology/: README.md  functional_forms.json  genre_ontology.json  technical_forms.json  wilson_academic_writing_ontology.json
tests/: test_agent_skills.py  test_agents.py  test_cli.py  test_coordination.py  test_deconstruct.py  test_docstrings.py  test_documentation_coverage.py  test_functional_forms.py  test_genre_ontology.py  test_graph.py  test_graph_loading.py  test_import_cli.py  test_io_helpers.py  test_kg_update.py  test_llm.py  test_models.py  test_note_import.py  test_ontology_consistency.py  test_ontology_normalization.py  test_pipeline.py  (+5 more)
(+12 files in other folders)
